tests/error/linear_errors/if_both_unused_reassign.err
Error: Drop violation (at $FILE:19:8)
   | 
17 | def foo(b: bool) -> qubit:
18 |     if b:
19 |         q = new_qubit()
   |         ^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
